updated html and css

--- a/contact-form-main/index.html
+++ b/contact-form-main/index.html
@@ -3,50 +3,86 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  
   <title>Frontend Mentor | Contact form</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-
-  Contact Us
-
-  First Name
-  This field is required
-
-  Last Name
-  This field is required
-
-  Email Address
-  Please enter a valid email address
-  This field is required
-
-  Query Type
-  General Enquiry
-  Support Request
-  Please select a query type
-
-  Message
-  This field is required
-
-  I consent to being contacted by the team
-  To submit this form, please consent to being contacted
-
-  Submit
-
-  Message Sent!
-  Thanks for completing the form. We'll be in touch soon!
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+  <div class="contact-form">
+    <h1>Contact Us</h1>
   </div>
+  <form class="contact-form">
+    <div class="form-item">
+      <label for="first-name">
+          First Name <span class="required-input">*</span>
+      </label>
+      <input type="text" name="first-name" id="first-name" aria-required="true" required>
+      <p class="form-alert" role="alert" style="display: none;">This field is required</p>
+    </div>
+    <div class="form-item">
+      <label for="last-name">
+          Last Name <span class="required-input">*</span>
+      </label>
+      <input type="text" name="last-name" id="last-name" aria-required="true" required>
+      <p class="form-alert" role="alert" style="display: none;">This field is required</p>
+    </div>
+    <div class="form-item">
+      <label for="email">
+          Email Address <span class="required-input">*</span>
+      </label>
+      <input type="email" name="email" id="email" aria-required="true" required>
+      <p class="form-alert" role="alert" style="display: none;">This field is required</p>
+    </div>
+    <div class="form-item">
+      <label for="query-type">
+          Query Type <span class="required-input">*</span>
+      </label>
+      <div class="radio-inputs">
+        <div class="radio-option">
+          <input type="radio" id="general-enquiry" name="query-type" value="general-enquiry" required>
+          <label for="general-enquiry">General Enquiry</label>
+        </div>
+        <div class="radio-option">
+          <input type="radio" id="support-request" name="query-type" value="support-request">
+          <label for="support-request">Support Request</label>
+        </div>
+        <p class="form-alert" role="alert" style="display: none;">Please select a query type</p>
+      </div>
+    </div>
+    <div class="form-item">
+      <label for="message">
+          Message <span class="required-input">*</span>
+      </label>
+      <textarea name="message" id="message" aria-required="true" required rows="4"></textarea>
+      <p class="form-alert" role="alert" style="display: none;">This field is required</p>
+    </div>
+    <div class="form-item">
+      <div>
+        <input type="checkbox" name="consent" id="consent" required>
+        <label for="consent">
+          I consent to being contacted by this team<span class="required-input">*</span>
+        </label>
+        <p class="form-alert" role="alert" style="display: none;">To submit this form, please consent to be contacted</p>
+      </div>
+    </div>   
+    <div class="form-item">
+      <button type="submit" class="submit-btn">Submit</button>
+    </div>
+    <div class="success-message">
+      <div class="message-header">
+        <img src="assets/images/icon-success-check.svg" alt="icon">
+        Message Sent!
+      </div>
+      <p>Thanks for completing the form. We'll be in touch soon!</p>
+     
+    </div>
+  </form>
+</body>
+</html>
+
+    <div class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge">Frontend Mentor</a>. 
+      Coded by <a href="#">Josh Murdock</a>.
+    </div>
 </body>
 </html>
